# qm_PC

./: .model  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main  main.cpp  model.qm
include/: Monitor.cpp  Monitor.h  Sensors.cpp  Sensors.h  bsp.cpp  bsp.h
